--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -17,16 +17,16 @@
   </head>
 
   <body>
-    <nav>
+    <nav class="nav-bar">
       <img src="./images/slack-logo.png" alt="slack_logo" />
       <ul>
         <li>Why Slack?</li>
         <li>Pricing</li>
         <li>About Us</li>
-        <li>Your Workspaces</li>
+        <li id="last-li">Your Workspaces</li>
       </ul>
     </nav>
-    <header>
+    <header class="first-section">
       <img src="./images/home_talking.png" alt="home_work_happening" />
       <h1>Where Work Happens</h1>
       <p>
@@ -35,17 +35,17 @@
         an A/B test, plan your next office opening, and more, Slack has you
         covered.
       </p>
-      <button type="button" name="button">GET STARTED</button>
-      <p>Already using Slack? <a href="#">Sign in</a></p>
+      <button type="button" name="button" class="blue-btn">GET STARTED</button>
+      <p class="sign-in">Already using Slack? <a href="#">Sign in</a></p>
     </header>
-    <main>
+    <main class="second-section">
       <div>
-        <h2>You're in good company</h2>
+        <h2 class="subtitle">You're in good company</h2>
         <p>
           Millions of people around the world have already made Slack the place
           where their work happens.
         </p>
-        <button>DISCOVER WHY</button>
+        <button class="white-btn">DISCOVER WHY</button>
         <img src="./images/airbnb-logo.png" alt="" />
         <img src="./images/capital-one-logo.png" alt="" />
         <img src="./images/harvard-logo.png" alt="" />
@@ -53,10 +53,10 @@
         <img src="./images/oracle-logo.png" alt="" />
         <img src="./images/ticketmaster-logo.png" alt="" />
       </div>
-      <div>
+      <div class="try">
         <p>Try it for free</p>
         <p>Already using Slack? <a href="">Sign in</a></p>
-        <button type="button" name="button">GET STARTED</button>
+        <button type="button" name="button" class="blue-btn">GET STARTED</button>
       </div>
     </main>
     <footer>
@@ -95,7 +95,7 @@
           <li>Slack Fund</li>
         </ul>
       </div>
-      <div>
+      <div class="footer">
         <ul>
           <li>Status</li>
           <li>Privacy & Terms</li>
